<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_motion_control_msgs</name>
  <version>1.0.0</version>
  <description>Orocos interface package (RTT Typekit) for rtt_motion_control_msgs</description>
  <maintainer email="none@kuleuven.be">None</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>motion_control_msgs</depend>
  <depend>orocoros2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


